--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Please rotate ur device</p>
 </div>
 <div class='loading_page'>
-    <img class='loading_svg' src="/svgfile/loading.svg" alt='Smoothie Land'/>
+    <img class='loading_svg' src="svgfile/loading.svg" alt='Smoothie Land'/>
     <div class='loading_bar'></div>
 </div>
 
