--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class='main_page'>
 
 <div class='header'>
-    <img class='header_logo' src='/svgfile/logo.svg' alt='Smoothie Land Logo'/>
+    <img class='header_logo' src='svgfile/logo.svg' alt='Smoothie Land Logo'/>
     <div class='header_nav'>
         <p class='header_home'>Home</p>
         <p>About us</p>
@@ -37,9 +37,9 @@
 <div class='prepare_page' id='cup_page'>
     <p class='prepare_page_title'>Choose the cup size</p>
     <div class='cup_display'>
-        <div class='cup cup_medium'><p>Medium</p><img src='/svgfile/cup_medium.svg'/></div>
+        <div class='cup cup_medium'><p>Medium</p><img src='svgfile/cup_medium.svg'/></div>
         <div class='line'></div>
-        <div class='cup cup_large'><p>Large</p><img src='/svgfile/cup_large.svg'/></div>            
+        <div class='cup cup_large'><p>Large</p><img src='svgfile/cup_large.svg'/></div>            
     </div>
     <div class='next_div'>
             <button class='next next1'> Next </button>
@@ -52,13 +52,13 @@
     <p class='prepare_page_title'>Choose the liquid for your smoothie</p>
     <div class='smoothie_display'>
         <div class='smoothie_scroll scroll1'>
-            <div class=' liquid water1'><p>Water</p><img src='/svgfile/liq_water.svg'/></div> 
-            <div class=' liquid raw_milk2'><p>Raw Milk</p><img src='/svgfile/liq_milk.svg'/></div> 
-            <div class=' liquid coconut_milk3'><p>Coconut Milk</p><img src='/svgfile/liq_coconut.svg'/></div> 
-            <div class=' liquid almond_milk4'><p>Almond Milk</p><img src='/svgfile/liq_almond.svg'/></div> 
+            <div class=' liquid water1'><p>Water</p><img src='svgfile/liq_water.svg'/></div> 
+            <div class=' liquid raw_milk2'><p>Raw Milk</p><img src='svgfile/liq_milk.svg'/></div> 
+            <div class=' liquid coconut_milk3'><p>Coconut Milk</p><img src='svgfile/liq_coconut.svg'/></div> 
+            <div class=' liquid almond_milk4'><p>Almond Milk</p><img src='svgfile/liq_almond.svg'/></div> 
         </div>
         <div class='smoothie_cup'>
-            <img class='smoothie_cup_img' src='/svgfile/cup_large.svg'/>
+            <img class='smoothie_cup_img' src='svgfile/cup_large.svg'/>
             <div class='fixedrectangle'></div>
             <div class='rectangle1'></div>
         </div>
@@ -74,13 +74,13 @@
     <p class='prepare_page_title'>Choose the base for your smoothie</p>
     <div class='smoothie_display'>
         <div class='smoothie_scroll scroll1'>   
-            <div class='base avocado1'><p>Avocado</p><img src='/svgfile/base_avocado.svg'/></div> 
-            <div class='base banana2'><p>Banana</p><img src='/svgfile/base_banana.svg'/></div> 
-            <div class='base pear3'><p>Pear</p><img src='/svgfile/base_pear.svg'/></div> 
-            <div class='base mango4'><p>Mango</p><img src='/svgfile/base_mango.svg'/></div> 
+            <div class='base avocado1'><p>Avocado</p><img src='svgfile/base_avocado.svg'/></div> 
+            <div class='base banana2'><p>Banana</p><img src='svgfile/base_banana.svg'/></div> 
+            <div class='base pear3'><p>Pear</p><img src='svgfile/base_pear.svg'/></div> 
+            <div class='base mango4'><p>Mango</p><img src='svgfile/base_mango.svg'/></div> 
         </div>
         <div class='smoothie_cup'>
-            <img class='smoothie_cup_img' src='/svgfile/cup_large.svg'/>
+            <img class='smoothie_cup_img' src='svgfile/cup_large.svg'/>
             <div class='rectangle1'></div>
             <div class='rectangle2'></div>
         </div>
@@ -96,13 +96,13 @@
     <p class='prepare_page_title'>Choose the fruit for your smoothie</p>
     <div class='smoothie_display'>
         <div class='smoothie_scroll scroll1'>   
-            <div class='fruit apple1'><p>Apple</p><img src='/svgfile/fruit_apple.svg'/></div> 
-            <div class='fruit kale2'><p>Kale</p><img src='/svgfile/fruit_kale.svg'/></div> 
-            <div class='fruit grapes3'><p>Grapes</p><img src='/svgfile/fruit_grapes.svg'/></div> 
-            <div class='fruit strawberry4'><p>Strawberry</p><img src='/svgfile/fruit_strawberry.svg'/></div> 
+            <div class='fruit apple1'><p>Apple</p><img src='svgfile/fruit_apple.svg'/></div> 
+            <div class='fruit kale2'><p>Kale</p><img src='svgfile/fruit_kale.svg'/></div> 
+            <div class='fruit grapes3'><p>Grapes</p><img src='svgfile/fruit_grapes.svg'/></div> 
+            <div class='fruit strawberry4'><p>Strawberry</p><img src='svgfile/fruit_strawberry.svg'/></div> 
         </div>
         <div class='smoothie_cup'>
-            <img class='smoothie_cup_img' src='/svgfile/cup_large.svg'/>
+            <img class='smoothie_cup_img' src='svgfile/cup_large.svg'/>
             <div class='rectangle1'></div>
             <div class='rectangle2'></div>
             <div class='rectangle3'></div>
@@ -120,8 +120,8 @@
     <div class='smoothie_display ice_display'>
         <p class='answer yes'>Yes</p>
         <div class='smoothie_cup'>
-            <img class='ice_img' src='/svgfile/ice.svg'>
-            <img class='smoothie_cup_img' src='/svgfile/cup_large.svg'/>
+            <img class='ice_img' src='svgfile/ice.svg'>
+            <img class='smoothie_cup_img' src='svgfile/cup_large.svg'/>
             <div class='rectangle1'></div>
             <div class='rectangle2'></div>
             <div class='rectangle3'></div>
@@ -140,7 +140,7 @@
     <p class='prepare_page_title'>Last Step. Click on the Smoothie to shake</p>
     <div class='smoothie_display ice_display'>
         <div class='shake_smoothie_cup'>
-            <img class='shake_smoothie_cup_img' src='/svgfile/cup_large.svg'/>
+            <img class='shake_smoothie_cup_img' src='svgfile/cup_large.svg'/>
             <div class='rectangle1'></div>
             <div class='rectangle2'></div>
             <div class='rectangle3'></div>
@@ -159,10 +159,10 @@
     <p class='fprepare_page_title'>Yaayy!! Your smoothie is ready!!</p>
     <div class='smoothie_display final_display'>
         <div class='smoothie_cup'>
-            <img class='final_smoothie_cup_img' src='/svgfile/cup_large.svg'/>
+            <img class='final_smoothie_cup_img' src='svgfile/cup_large.svg'/>
             <div class='rectangle4'></div>
-            <img class='smoothie_sparkle' src='/svgfile/cup_sparkle.svg'/>
-            <img class='smoothie_sparkle1' src='/svgfile/cup_sparkle1.svg'/>
+            <img class='smoothie_sparkle' src='svgfile/cup_sparkle.svg'/>
+            <img class='smoothie_sparkle1' src='svgfile/cup_sparkle1.svg'/>
         </div>
         <div class='line'></div>
         <div class='smoothie_ingredients'>
@@ -199,7 +199,7 @@
             <li>¼ teaspoon ground cinnamon</li>
             <p class='recipes_desc'>Blend 1 banana, 1 cup nut milk, 1 cup torn kale, 2 Tbsp. peanut butter, ¼ tsp. ground cinnamon, and ½ cup ice in a blender until smooth.</p>
             </div>
-            <img class='recipes_img1' src='/svgfile/fruit_kale.svg'/>
+            <img class='recipes_img1' src='svgfile/fruit_kale.svg'/>
         </div>
         <br/>
         <div class='recipe_item'>
@@ -213,7 +213,7 @@
             <li>¼ cup unsweetened almond milk or coconut water</li>
             <p class='recipes_desc'>Blend orange, dates, almonds, and 3 Tbsp. water in a blender on low speed until almonds are finely ground. Increase speed to high and blend until mixture is no longer grainy, about 1 minute. Add banana, kale, almond milk, and ½ cup ice; blend until drink is smooth and thick.</p>
             </div>
-            <img class='recipes_img2' src='/svgfile/base_banana.svg'/>     
+            <img class='recipes_img2' src='svgfile/base_banana.svg'/>     
         </div>
         <br/>
         <div class='recipe_item'>
@@ -227,7 +227,7 @@
             <li>½ cup frozen blackberries or blueberries</li>
             <p class='recipes_desc'>Purée banana,2 medjool dates, mango chunks, coconut water, blackberries, yogurt, and flaxseeds in a blender until smooth.</p>
             </div>
-            <img class='recipes_img1' src='/svgfile/base_mango.svg'/>
+            <img class='recipes_img1' src='svgfile/base_mango.svg'/>
         </div>
 </div>
 </div>
