--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
 <div class='footer'>
     <p class='more_recipe'>More recipes -></p>  
     <div class='footer_nav'>
-        <img src='/pngfile/facebook.png'>
-        <img src='/pngfile/insta.png'>
-        <img src='/pngfile/twitter.png'>
+        <img src='pngfile/facebook.png'>
+        <img src='pngfile/insta.png'>
+        <img src='pngfile/twitter.png'>
     </div>               
 </div>
     
