--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hanken" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Smoothie</title>
